Profil photo change

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
         <div class="content-wrapper">
             <div class="two-column-wrapper">
                 <div class="profile-image-wrapper">
-                    <img src="images/profil.jpg">
+                    <img src="images/profil 1.jpg">
                 </div>
 
                 <div class="profile-content-wrapper">
