--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         </div>
 
                         <div class="subtitle">
-                            10. 10 SSC Ultimate Aero TT Max. Speed: 412 kmph
+                            10. SSC Ultimate Aero TT Max. Speed: 412 kmph
                         </div>
                     </div>
                 </div>    
